green: whenInternalProcessRequestThenInternalProcessResponse