@@ -9,6 +9,7 @@ import java.util.stream.Stream;
 import static com.github.thxmasj.statemachine.EntitySelector.entityId;
 import static com.github.thxmasj.statemachine.EntitySelector.newEntityId;
 import static com.github.thxmasj.statemachine.EntitySelector.secondaryId;
+import static java.util.stream.Collectors.toList;
 
 public class EventTrigger<T, I, O> {
 
@@ -18,13 +19,13 @@ public class EventTrigger<T, I, O> {
   ) {}
 
   private final EventSpec<T, I, O> eventSpec;
-  private final List<? extends EntitySelector<T>> entitySelectors;
+  private final List<Function<T, ? extends EntitySelector<T>>> entitySelectors;
   private final EntityModel entityModel;
   private final boolean createEntity;
 
   public EventTrigger(
       EventSpec<T, I, O> eventSpec,
-      List<? extends EntitySelector<T>> entitySelectors,
+      List<Function<T, ? extends EntitySelector<T>>> entitySelectors,
       EntityModel entityModel,
       boolean createEntity
   ) {
@@ -35,19 +36,19 @@ public class EventTrigger<T, I, O> {
   }
 
   public static <I, O> EventTrigger<I, I, O> trigger(EventType<I, O> eventType, EntityModel entityModel, UUID entityId, I data) {
-    return new EventTrigger<>(new EventSpec<>(eventType, _ -> data), List.of(entityId(entityId)), entityModel, false);
+    return new EventTrigger<>(new EventSpec<>(eventType, _ -> data), List.of(_ -> entityId(entityId)), entityModel, false);
   }
 
   public static <I, O> EventTrigger<I, I, O> trigger(EventType<I, O> eventType, EntityModel entityModel) {
-    return new EventTrigger<>(new EventSpec<>(eventType, d -> d), List.of(newEntityId()), entityModel, false);
+    return new EventTrigger<>(new EventSpec<>(eventType, d -> d), List.of(_ -> newEntityId()), entityModel, false);
   }
 
   public static <I, O> EventTrigger<I, I, O> trigger(EventType<I, O> eventType, EntityModel entityModel, UUID entityId) {
-    return new EventTrigger<>(new EventSpec<>(eventType, d -> d), List.of(entityId(entityId)), entityModel, false);
+    return new EventTrigger<>(new EventSpec<>(eventType, d -> d), List.of(_ -> entityId(entityId)), entityModel, false);
   }
 
   public static <I, O, ID> EventTrigger<I, I, O> trigger(EventType<I, O> eventType, EntityModel entityModel, SecondaryIdModel<ID> idModel, ID idValue) {
-    return new EventTrigger<>(new EventSpec<>(eventType, d -> d), List.of(secondaryId(idModel, _ -> idValue)), entityModel, false);
+    return new EventTrigger<>(new EventSpec<>(eventType, d -> d), List.of(_ -> secondaryId(idModel, _ -> idValue)), entityModel, false);
   }
 
   public EventSpec<T, I, O> eventSpec() {
@@ -58,14 +59,14 @@ public class EventTrigger<T, I, O> {
     return new EventTrigger<>(eventSpec, replaceFallbackSelector(), entityModel(), createEntity());
   }
 
-  private List<EntitySelector<T>> replaceFallbackSelector() {
+  private List<Function<T, ? extends EntitySelector<T>>> replaceFallbackSelector() {
     return Stream.concat(
-        Stream.of(entitySelectors.getFirst().fallback()),
+        Stream.of(entitySelectors.getFirst().andThen(EntitySelector::fallback)),
         entitySelectors.subList(1, entitySelectors.size()).stream()
-    ).toList();
+    ).collect(toList());
   }
 
-  public List<? extends EntitySelector<T>> entitySelectors() {
+  public List<Function<T, ? extends EntitySelector<T>>> entitySelectors() {
     return entitySelectors;
   }
 
